# PhiProj

CMakeModules/: CheckCXX11Features.cmake  FindTBB.cmake
src/: CMakeLists.txt  test_mult_tbb_lambda.cpp
